--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon app.ts"
+    "dev": "nodemon app.ts",
+    "serve": "node --unhandled-rejections=strict -r ts-node/register app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.9",
     "nodemon": "^2.0.15",
     "npxd": "^1.2.1",
@@ -24,9 +26,11 @@
     "@prisma/client": "^3.5.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^14.0.0",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7"
   }
 }
