--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "4.17.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "nodemon": "^2.0.15",
     "npxd": "^1.2.1",
     "prisma": "^3.5.0",
